# CurveCrypt

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
examples/: CMakeLists.txt  curve_cli.cpp  simple_example.cpp
include/curvecrypt/: curvecrypt.h  error.h  exchange.h  key_pair.h  secure_message.h  types.h  utility.h
src/: error.cpp  exchange.cpp  key_pair.cpp  secure_message.cpp  utility.cpp
tests/: CMakeLists.txt  test_exchange.cpp  test_key_pair.cpp  test_secure_message.cpp  test_utility.cpp
